--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -2,43 +2,24 @@ main:
   - title: "Bi-Factorial Preference Optimization: Balancing Safety-Helpfulness in Language Models"
     authors: <strong>Wenxuan Zhang</strong>, Philip Torr, Mohamed Elhoseiny, Adel Bibi
     # conference: CVPR.
-    conference: ArXiv preprint
-    pdf: https://www.arxiv.org/pdf/2408.15313
-    # code: https://github.com/wx-zhang/spu/tree/main
-    # page: https://wx-zhang.github.io/spu/html/
-    # bibtex: assets/bib/compat_pp.bib
-    video: assets/teasers/bfpo.mov
-    is_preprint: true
+    pub_short: CVPR'24
+    pub_detail: 2024 IEEE/CVF Conference on Computer Vision and Pattern Recognition (CCF-A)
 
   - title: "Overcoming Generic Knowledge Loss with Selective Parameter Update"
     authors: <strong>Wenxuan Zhang</strong>, Paul Janson, Rahaf Aljundi, Mohamed Elhoseiny
     # conference: CVPR.
-    conference_short: CVPR
-    pdf: https://arxiv.org/abs/2308.12462
-    code: https://github.com/wx-zhang/spu/tree/main
-    page: https://wx-zhang.github.io/spu/html/
-    # bibtex: assets/bib/compat_pp.bib
-    video: assets/teasers/spu.mov
-
+    pub_short: CVPR'24
+    pub_detail: 2024 IEEE/CVF Conference on Computer Vision and Pattern Recognition (CCF-A)
 
   - title: "Label Delay in Continual Learning"
     authors: Botos Csaba*, <strong>Wenxuan Zhang*</strong>, Matthias Müller, Ser-Nam Lim, Mohamed Elhoseiny, Philip Torr, Adel Bibi
-    conference: ArXiv preprint.
-    pdf: https://arxiv.org/abs/2312.00923
-    # code: https://github.com/Vision-CAIR/3DCoMPaT-v2
-    page: https://botcs.github.io/label-delay/
-    # bibtex: assets/bib/compat_pp.bib
-    video: assets/teasers/iwms.mp4
-    is_preprint: true
+    pub_short: Preprint
+    pub_detail: Under Review
 
   - title: "Continual Learning on a Diet: Learning from Sparsely Labeled Streams Under Constrained Computation"
     authors: <strong>Wenxuan Zhang</strong>, Youssef Mohamed, Bernard Ghanem, Philip Torr, Adel Bibi, Mohamed Elhoseiny
-    conference_short: ICLR
-    pdf: https://arxiv.org/abs/2404.12766
-    code: https://github.com/wx-zhang/continual-learning-on-a-diet
-    # page: https://botcs.github.io/label-delay/
-    # bibtex: assets/bib/compat_pp.bib
-    video: assets/teasers/diet.mov
+    pub_short: CVPR'24
+    pub_detail: 2024 IEEE/CVF Conference on Computer Vision and Pattern Recognition (CCF-A)
 
 
   # - title: "Continual Zero-Shot Learning through Semantically Guided Generative Random Walks"
