--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -1,37 +1,37 @@
 main:
-  - title: "From Non-IID to IID: Mobility-aware Hierarchical Federated Learning with Client-Edge Association Control"
+  - title: <strong>"From Non-IID to IID: Mobility-aware Hierarchical Federated Learning with Client-Edge Association Control"</strong>
     authors: <strong> Haibo Liu</strong>, Zhenzhe Zheng, Fan Wu, Guihai Chen
     pub_short: <strong> Preprint </strong>
     pub_detail: Under Review
 
-  - title: "Enabling Real-Time Inference in Online Continual Learning via Device-Cloud Collaboration"
+  - title: <strong>"Enabling Real-Time Inference in Online Continual Learning via Device-Cloud Collaboration"</strong>
     authors: <strong>Haibo Liu</strong>, Chen Gong, Zhenzhe Zheng, Shengzhong Liu, Fan Wu
     pub_short: <strong>Preprint</strong>
     pub_detail: Under Review
 
-  - title: "Latency-aware Online Continual Learning for Non-Stationary Data Streams"
+  - title: <strong>"Latency-aware Online Continual Learning for Non-Stationary Data Streams"</strong>
     authors: <strong> Haibo Liu </strong>, Da Huo, Zhenzhe Zheng, Fan Wu
     pub_short: <strong> Preprint </strong>
     pub_detail: Under Review
 
 
-  - title: "FedUP: Bridging Fairness and Efficiency in Cross-Silo Federated Learning"
+  - title: <strong>"FedUP: Bridging Fairness and Efficiency in Cross-Silo Federated Learning"</strong>
     authors: <strong> Haibo Liu </strong>, Jianfeng Lu, Xiong Wang, Chen Wang, Riheng Jia, Minglu Li
     pub_short: <strong> TSC'2 4</strong>
     pub_detail: IEEE Transactions on Services Computing (<strong> CCF-A </strong>)
 
 
-  - title: "Incentivizing proportional fairness for multi-task allocation in crowdsensing"
+  - title: <strong>"Incentivizing proportional fairness for multi-task allocation in crowdsensing"</strong>
     authors: Jianfeng Lu, <strong>Haibo Liu</strong>, Riheng Jia, Zhao Zhang, Xiong Wang, Jiangtao Wang
     pub_short: <strong>TSC'23</strong>
     pub_detail: IEEE Transactions on Services Computing (<strong>CCF-A</strong>)
 
-  - title: "Towards Personalized Federated Learning Via Group Collaboration in IIoT"
+  - title: <strong>"Towards Personalized Federated Learning Via Group Collaboration in IIoT"</strong>
     authors: Jianfeng Lu, <strong>Haibo Liu</strong>, Riheng Jia, Jiangtao Wang, Lichao Sun, Shaohua Wan
     pub_short: <strong>TII'22</strong>
-    pub_detail: IEEE Transactions on Industrial Informatics (<strong>CAA-A,  JCR Q1，中科院1区, IF=11.7</strong>)
+    pub_detail: IEEE Transactions on Industrial Informatics (<strong>CAA-A, JCR Q1, 中科院1区, IF=11.7</strong>)
 
-  - title: "Toward fairness-aware time-sensitive asynchronous federated learning for critical energy infrastructure"
+  - title: <strong>"Toward fairness-aware time-sensitive asynchronous federated learning for critical energy infrastructure"</strong>
     authors: Jianfeng Lu, <strong>Haibo Liu</strong>, Zhao Zhang, Jiangtao Wang, Sotirios K Goudos, Shaohua Wan
     pub_short: <strong>TII'21</strong>
     pub_detail: IEEE Transactions on Industrial Informatics (<strong>CAA-A, JCR Q1, 中科院1区, IF=11.7</strong>)
