--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -1,37 +1,37 @@
 main:
-  - title: <strong>From Non-IID to IID: Mobility-aware Hierarchical Federated Learning with Client-Edge Association Control</strong>
+  - title: From Non-IID to IID: Mobility-aware Hierarchical Federated Learning with Client-Edge Association Control
     authors: <strong> Haibo Liu</strong>, Zhenzhe Zheng, Fan Wu, Guihai Chen
     pub_short: <strong> Preprint </strong>
     pub_detail: Under Review
 
-  - title: <strong>Enabling Real-Time Inference in Online Continual Learning via Device-Cloud Collaboration</strong>
+  - title: Enabling Real-Time Inference in Online Continual Learning via Device-Cloud Collaboration
     authors: <strong>Haibo Liu</strong>, Chen Gong, Zhenzhe Zheng, Shengzhong Liu, Fan Wu
     pub_short: <strong>Preprint</strong>
     pub_detail: Under Review
 
-  - title: <strong>Latency-aware Online Continual Learning for Non-Stationary Data Streams</strong>
+  - title: Latency-aware Online Continual Learning for Non-Stationary Data Streams
     authors: <strong> Haibo Liu </strong>, Da Huo, Zhenzhe Zheng, Fan Wu
     pub_short: <strong> Preprint </strong>
     pub_detail: Under Review
 
 
-  - title: <strong>FedUP: Bridging Fairness and Efficiency in Cross-Silo Federated Learning</strong>
+  - title: FedUP: Bridging Fairness and Efficiency in Cross-Silo Federated Learning
     authors: <strong> Haibo Liu </strong>, Jianfeng Lu, Xiong Wang, Chen Wang, Riheng Jia, Minglu Li
     pub_short: <strong> TSC'2 4</strong>
     pub_detail: IEEE Transactions on Services Computing (<strong> CCF-A </strong>)
 
 
-  - title: <strong>Incentivizing proportional fairness for multi-task allocation in crowdsensing</strong>
+  - title: Incentivizing proportional fairness for multi-task allocation in crowdsensing
     authors: Jianfeng Lu, <strong>Haibo Liu</strong>, Riheng Jia, Zhao Zhang, Xiong Wang, Jiangtao Wang
     pub_short: <strong>TSC'23</strong>
     pub_detail: IEEE Transactions on Services Computing (<strong>CCF-A</strong>)
 
-  - title: <strong>Towards Personalized Federated Learning Via Group Collaboration in IIoT</strong>
+  - title: Towards Personalized Federated Learning Via Group Collaboration in IIoT
     authors: Jianfeng Lu, <strong>Haibo Liu</strong>, Riheng Jia, Jiangtao Wang, Lichao Sun, Shaohua Wan
     pub_short: <strong>TII'22</strong>
     pub_detail: IEEE Transactions on Industrial Informatics (<strong>CAA-A, JCR Q1, 中科院1区, IF=11.7</strong>)
 
-  - title: <strong>Toward fairness-aware time-sensitive asynchronous federated learning for critical energy infrastructure</strong>
+  - title: Toward fairness-aware time-sensitive asynchronous federated learning for critical energy infrastructure
     authors: Jianfeng Lu, <strong>Haibo Liu</strong>, Zhao Zhang, Jiangtao Wang, Sotirios K Goudos, Shaohua Wan
     pub_short: <strong>TII'21 </strong>
     pub_detail: IEEE Transactions on Industrial Informatics (<strong>CAA-A, JCR Q1, 中科院1区, IF=11.7</strong>)
