--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -1,5 +1,5 @@
 main:
-  - title: "From Non-IID to IID: Mobility-aware Hierarchical Federated Learning with Client-Edge Association Control"
+  - title: "<strong> From Non-IID to IID: Mobility-aware Hierarchical Federated Learning with Client-Edge Association Control</strong>"
     authors: <strong>Haibo Liu/strong>, Zhenzhe Zheng, Fan Wu, Guihai Chen
     pub_short: <strong>Preprint</strong>
     authors: <strong> Haibo Liu</strong>, Zhenzhe Zheng, Fan Wu, Guihai Chen
