--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Basic Information 
 title: Haibo Liu
 position: PhD Student
-affiliation: SJTU
+affiliation: SJTU, Shanghai, China
 affiliation_link: https://liuhaibo919.github.io/
 affiliation_logo: ./assets/img/kaust_logo.svg
 email: liuhaibo@sjtu.edu.cn
