--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -35,7 +35,7 @@ main:
   - title: "<strong> Towards Personalized Federated Learning Via Group Collaboration in IIoT</strong>"
     authors: Jianfeng Lu, <strong>Haibo Liu</strong>, Riheng Jia, Jiangtao Wang, Lichao Sun, Shaohua Wan
     pub_short: <strong>TII'22</strong>
-    pub_detail: IEEE Transactions on Industrial Informatics (<strong>CAA-A,  JCR Q1，中科院1区, IF=11.7</strong>)
+    pub_detail: IEEE Transactions on Industrial Informatics (<strong>CAA-A, JCR Q1, 中科院1区, IF=11.7</strong>)
 
   - title: "<strong> Toward fairness-aware time-sensitive asynchronous federated learning for critical energy infrastructure</strong>"
     authors: Jianfeng Lu, <strong>Haibo Liu</strong>, Zhao Zhang, Jiangtao Wang, Sotirios K Goudos, Shaohua Wan
