--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Haibo Liu
 position: PhD Student
 email: liuhaibo@sjtu.edu.cn
-affiliation: SJTU, Shanghai, China
+affiliation: Shanghai Jiao Tong University
 affiliation_link: https://liuhaibo919.github.io/
 
 # # Search Engine Optimization (SEO)
