--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -23,14 +23,14 @@ main:
   - title: "<strong> FedUP: Bridging Fairness and Efficiency in Cross-Silo Federated Learning</strong>"
     authors: <strong>Haibo Liu</strong>, Jianfeng Lu, Xiong Wang, Chen Wang, Riheng Jia, Minglu Li
     pub_short: <strong>TSC'24</strong>
-    pub_detail: IEEE Transactions on Services Computing (<strong>CCF-A</strong>)
+    pub_detail: IEEE Transactions on Services Computing (<strong>CCF-A, JCR Q1</strong>)
 
 
 
   - title: "<strong> Incentivizing proportional fairness for multi-task allocation in crowdsensing</strong>"
     authors: Jianfeng Lu, <strong>Haibo Liu</strong>, Riheng Jia, Zhao Zhang, Xiong Wang, Jiangtao Wang
     pub_short: <strong>TSC'23</strong>
-    pub_detail: IEEE Transactions on Services Computing (<strong>CCF-A</strong>)
+    pub_detail: IEEE Transactions on Services Computing (<strong>CCF-A, JCR Q1</strong>)
 
   - title: "<strong> Towards Personalized Federated Learning Via Group Collaboration in IIoT</strong>"
     authors: Jianfeng Lu, <strong>Haibo Liu</strong>, Riheng Jia, Jiangtao Wang, Lichao Sun, Shaohua Wan
