--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -17,7 +17,7 @@ main:
     pub_short: <strong>INCOCOM'25</strong>
     authors: <strong> Haibo Liu </strong>, Da Huo, Zhenzhe Zheng, Fan Wu
     pub_short: <strong> INCOCOM'25 </strong>
-    pub_detail: IEEE International Conference on Computer Communications (<strong>CCF-A, acceptance rate: 18.6% (272/1548)</strong>)
+    pub_detail: Under
 
   - title: "<strong> FedUP: Bridging Fairness and Efficiency in Cross-Silo Federated Learning</strong>"
     authors: <strong>Haibo Liu</strong>, Jianfeng Lu, Xiong Wang, Chen Wang, Riheng Jia, Minglu Li
