--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -2,7 +2,7 @@ main:
   - title: "<strong> From Non-IID to IID: Mobility-aware Hierarchical Federated Learning with Client-Edge Association Control</strong>"
     authors: <strong>Haibo Liu/strong>, Zhenzhe Zheng, Fan Wu, Guihai Chen
     pub_short: <strong>Preprint</strong>
-    authors: <strong> Haibo Liu</strong>, Zhenzhe Zheng, Fan Wu, Guihai Chen
+    authors: <strong> $\underline{Haibo Liu}$</strong>, Zhenzhe Zheng, Fan Wu, Guihai Chen
     pub_short: <strong> Preprint </strong>
     pub_detail: Under Review
 
