--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -1,42 +1,36 @@
 main:
   - title: "<strong> From Non-IID to IID: Mobility-aware Hierarchical Federated Learning with Client-Edge Association Control</strong>"
-    authors: <strong>Haibo Liu/strong>, Zhenzhe Zheng, Fan Wu, Guihai Chen
-    pub_short: <strong>Preprint</strong>
     authors: <strong> <u>Haibo Liu</u></strong>, Zhenzhe Zheng, Fan Wu, Guihai Chen
     pub_short: <strong> Preprint </strong>
     pub_detail: Under Review
 
   - title: "<strong> Enabling Real-Time Inference in Online Continual Learning via Device-Cloud Collaboration</strong>"
-    authors: <strong>Haibo Liu/strong>, Chen Gong, Zhenzhe Zheng, Shengzhong Liu, Fan Wu
-    authors: <strong>Haibo Liu</strong>, Chen Gong, Zhenzhe Zheng, Shengzhong Liu, Fan Wu
+    authors: <strong><u>Haibo Liu</u></strong>, Chen Gong, Zhenzhe Zheng, Shengzhong Liu, Fan Wu
     pub_short: <strong>WWW'25</strong>
     pub_detail: ACM International World Wide Web Conference (<strong> CCF-A, acceptance rate:19.8%(409/2062)</strong>)
 
   - title: "<strong> Latency-aware Online Continual Learning for Non-Stationary Data Streams</strong>"
-    authors: <strong>Haibo Liu/strong>, Da Huo, Zhenzhe Zheng, Fan Wu
+    authors: <strong><u>Haibo Liu</u></strong>, Da Huo, Zhenzhe Zheng, Fan Wu
     pub_short: <strong>INCOCOM'25</strong>
-    authors: <strong> Haibo Liu </strong>, Da Huo, Zhenzhe Zheng, Fan Wu
-    pub_short: <strong> INCOCOM'25 </strong>
     pub_detail: IEEE International Conference on Computer Communications (<strong> CCF-A, acceptance rate:18.6% (272/1548)</strong>)
 
   - title: "<strong> FedUP: Bridging Fairness and Efficiency in Cross-Silo Federated Learning</strong>"
-    authors: <strong>Haibo Liu</strong>, Jianfeng Lu, Xiong Wang, Chen Wang, Riheng Jia, Minglu Li
+    authors: <strong><u>Haibo Liu</u></strong>, Jianfeng Lu, Xiong Wang, Chen Wang, Riheng Jia, Minglu Li
     pub_short: <strong>TSC'24</strong>
     pub_detail: IEEE Transactions on Services Computing (<strong>CCF-A, SCI-1区TOP</strong>)
 
 
-
   - title: "<strong> Incentivizing proportional fairness for multi-task allocation in crowdsensing</strong>"
-    authors: Jianfeng Lu, <strong>Haibo Liu</strong>, Riheng Jia, Zhao Zhang, Xiong Wang, Jiangtao Wang
+    authors: Jianfeng Lu, <strong><u>Haibo Liu</u></strong>, Riheng Jia, Zhao Zhang, Xiong Wang, Jiangtao Wang
     pub_short: <strong>TSC'23</strong>
     pub_detail: IEEE Transactions on Services Computing (<strong>CCF-A, SCI-1区TOP</strong>)
 
   - title: "<strong> Towards Personalized Federated Learning Via Group Collaboration in IIoT</strong>"
-    authors: Jianfeng Lu, <strong>Haibo Liu</strong>, Riheng Jia, Jiangtao Wang, Lichao Sun, Shaohua Wan
+    authors: Jianfeng Lu, <strong><u>Haibo Liu</u></strong>, Riheng Jia, Jiangtao Wang, Lichao Sun, Shaohua Wan
     pub_short: <strong>TII'22</strong>
     pub_detail: IEEE Transactions on Industrial Informatics (<strong>SCI-1区TOP, IF=11.7</strong>)
 
   - title: "<strong> Toward fairness-aware time-sensitive asynchronous federated learning for critical energy infrastructure</strong>"
-    authors: Jianfeng Lu, <strong>Haibo Liu</strong>, Zhao Zhang, Jiangtao Wang, Sotirios K Goudos, Shaohua Wan
+    authors: Jianfeng Lu, <strong><u>Haibo Liu</u></strong>, Zhao Zhang, Jiangtao Wang, Sotirios K Goudos, Shaohua Wan
     pub_short: <strong>TII'21</strong>
     pub_detail: IEEE Transactions on Industrial Informatics (<strong>SCI-1区TOP, IF=11.7</strong>)
