--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -1,18 +1,28 @@
 main:
+  - title: "<strong> Lethe:Learning Brain-inspired Motivated Forgetting for Resource-efficient on-device Continual Learning</strong>"
+    authors: <strong> <u>Haibo Liu</u></strong>, Chenxin Mao, Zhenzhe Zheng, Fan Wu, Guihai Chen
+    pub_short: <strong> Preprint</strong>
+    pub_detail: Under Review
+
+  - title: "<strong> ELITE:Device-Cloud Collaborative Online Continual Learning for Real-Time Inference</strong>"
+    authors: <strong> <u>Haibo Liu</u></strong>, Zhenzhe Zheng, Fan Wu, Guihai Chen
+    pub_short: <strong> Preprint</strong>
+    pub_detail: Under Review
+    
   - title: "<strong> From Non-IID to IID: Mobility-aware Hierarchical Federated Learning with Client-Edge Association Control</strong>"
     authors: <strong> <u>Haibo Liu</u></strong>, Zhenzhe Zheng, Fan Wu, Guihai Chen
-    pub_short: <strong> Preprint </strong>
-    pub_detail: Under Review
+    pub_short: <strong> TMC'25</strong>
+    pub_detail: IEEE Transactions on Mobile Computing (<strong>CCF-A, SCI-1区TOP</strong>)
 
   - title: "<strong> Enabling Real-Time Inference in Online Continual Learning via Device-Cloud Collaboration</strong>"
     authors: <strong><u>Haibo Liu</u></strong>, Chen Gong, Zhenzhe Zheng, Shengzhong Liu, Fan Wu
     pub_short: <strong>WWW'25</strong>
-    pub_detail: ACM International World Wide Web Conference (<strong> CCF-A, acceptance rate:19.8% (409/2062)</strong>)
+    pub_detail: ACM International World Wide Web Conference (<strong> CCF-A, acceptance rate=19.8% (409/2062)</strong>)
 
   - title: "<strong> Latency-aware Online Continual Learning for Non-Stationary Data Streams</strong>"
     authors: <strong><u>Haibo Liu</u></strong>, Da Huo, Zhenzhe Zheng, Fan Wu
     pub_short: <strong>INFOCOM'25</strong>
-    pub_detail: IEEE International Conference on Computer Communications (<strong> CCF-A, acceptance rate:18.6%(272/1548)</strong>)
+    pub_detail: IEEE International Conference on Computer Communications (<strong> CCF-A, acceptance rate=18.6%(272/1548)</strong>)
 
   - title: "<strong> FedUP: Bridging Fairness and Efficiency in Cross-Silo Federated Learning</strong>"
     authors: <strong><u>Haibo Liu</u></strong>, Jianfeng Lu, Xiong Wang, Chen Wang, Riheng Jia, Minglu Li
@@ -28,9 +38,9 @@ main:
   - title: "<strong> Towards Personalized Federated Learning Via Group Collaboration in IIoT</strong>"
     authors: Jianfeng Lu, <strong><u>Haibo Liu</u></strong>, Riheng Jia, Jiangtao Wang, Lichao Sun, Shaohua Wan
     pub_short: <strong>TII'22</strong>
-    pub_detail: IEEE Transactions on Industrial Informatics (<strong>SCI-1区TOP, IF=11.7</strong>)
+    pub_detail: IEEE Transactions on Industrial Informatics (<strong>CAA-A, SCI-1区TOP</strong>)
 
   - title: "<strong> Toward fairness-aware time-sensitive asynchronous federated learning for critical energy infrastructure</strong>"
     authors: Jianfeng Lu, <strong><u>Haibo Liu</u></strong>, Zhao Zhang, Jiangtao Wang, Sotirios K Goudos, Shaohua Wan
     pub_short: <strong>TII'21</strong>
-    pub_detail: IEEE Transactions on Industrial Informatics (<strong>SCI-1区TOP, IF=11.7</strong>)
+    pub_detail: IEEE Transactions on Industrial Informatics (<strong>CAA-A, SCI-1区TOP</strong>)
