--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -4,7 +4,7 @@ main:
     pub_short: <strong> Preprint</strong>
     pub_detail: Under Review
     
-  - title: "<strong> Lethe:Learning Brain-inspired Motivated Forgetting for Resource-efficient on-device Continual Learning</strong>"
+  - title: "<strong> Lethe:Plasticity-aware Active Forgetting for Resource-Efficient On-Device Continual Learning</strong>"
     authors: <strong> <u>Haibo Liu</u></strong>, Chenxin Mao, Zhenzhe Zheng, Fan Wu, Guihai Chen, He Huang
     pub_short: <strong> Preprint</strong>
     pub_detail: Under Review
