--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -12,15 +12,7 @@ main:
   - title: "Publications"
     url: ./#publications
 
-
-
-
-
-
-  
-
-
-  - title: "Rewards"
+  - title: "Reward"
     url: ./#rewards
 
   #- title: "Teaching"
