--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -12,7 +12,7 @@ main:
   - title: "Publications"
     url: ./#publications
 
-  - title: "Reward"
+  - title: "Rewards"
     url: ./#rewards
 
   #- title: "Teaching"
