--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -30,13 +30,13 @@ main:
     pub_detail: IEEE International Conference on Computer Communications (<strong> CCF-A, acceptance rate=18.6%(272/1548)</strong>)
 
   - title: "<strong> FedUP: Bridging Fairness and Efficiency in Cross-Silo Federated Learning</strong>"
-    authors: Chenxin Mao, Chen<strong><u>Haibo Liu</u></strong>, Zhenzhe Zheng#, Fan Wu, Guihai
-    pub_short: <strong>WWW'26</strong>
-    pub_detail: ACM International World Wide Web Conference (<strong> CCF-A, acceptance rate=20.1% (676/3370)</strong>)
+    authors: <strong><u>Haibo Liu</u></strong>,  Jianfeng Lu, Xiong Wang, Chen Wang, Riheng Jia, Minglu Li
+    pub_short: <strong>TSC'24</strong>
+    pub_detail: IEEE Transactions on Services Computing (<strong>CCF-A, SCI-1区TOP</strong>)
 
   - title: "<strong> Smaller but Better: Plasticity-Preserving On-Device Continual Learning for Embedded AI</strong>"
-    authors: <strong><u>Haibo Liu</u></strong>, Chen Gong, Zhenzhe Zheng, Shengzhong Liu, Fan Wu
-    pub_short: <strong>WWW'25</strong>
+    authors: Chenxin Mao, <strong><u>Haibo Liu</u></strong>, Zhenzhe Zheng, Fan Wu, Guihai Chen
+    pub_short: <strong>WWW'26</strong>
     pub_detail: ACM International World Wide Web Conference (<strong> CCF-A, acceptance rate=19.8% (409/2062)</strong>)
 
 
