--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -1,6 +1,6 @@
 main:
   - title: "<strong> Well Begun is Half Done: Efficient Initialization for Online Continual Learning via Two-Stage Model Merging</strong>"
-    authors: <strong> <u>Haibo Liu</u></strong>, Chenxin Mao, Zhenzhe Zheng, Fan Wu, Guihai Chen, He Huang
+    authors: <strong> <u>Haibo Liu</u></strong>, Chen Gong, Zhenzhe Zheng, Fan Wu, Guihai Chen, He Huang
     pub_short: <strong> Preprint</strong>
     pub_detail: Under Review
     
